<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AircamQC</string>
    <string name="action_settings"></string>
    <string name="mqtt_broker_url_label">MQTT Broker URL</string>
    <string name="connect_mqtt_broker_button">connect MQTT</string>
    <string name="disconnect_mqtt_broker_button">disconnect MQTT</string>
    <string name="set_altitude_level_to_zero_label">Set Alt. to zero</string>
    <string name="set_altitude_level_to_zero_button">set zero</string>
    <string name="default_uri_of_broker">tcp://broker.mqtt-dashboard.com:1883</string>
    <string name="transmit_preview">Transmit preview</string>
    <!-- <string name="default_uri_of_broker">tcp://192.168.43.187:1883</string> -->
    <string name="bluetooth_device">Device to connect</string>
    <string name="connect_bluetooth_device_button">connect BT</string>
    
</resources>
