<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRowBrokerUrlTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" >

                <TextView
                    android:id="@+id/mqttBrokerUrlLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mqtt_broker_url_label" />

                <EditText
                    android:id="@+id/mqttBrokerUrl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textUri"
                    android:text="@string/default_uri_of_broker" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowConnectBrokerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" >

                <Button
                    android:id="@+id/connectMQTTBrokerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_mqtt_broker_button" />

                <Button
                    android:id="@+id/disconnectMQTTBrokerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnect_mqtt_broker_button" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowsetAltitudeLevelToZeroTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" >

                <TextView
                    android:id="@+id/setAltitudeLevelToZeroLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_altitude_level_to_zero_label" />

                <Button
                    android:id="@+id/setAltitudeLevelToZeroButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_altitude_level_to_zero_button" />
            </TableRow>
        </TableLayout>

        <FrameLayout
            android:id="@+id/preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_span="3"
            android:layout_weight="1" >
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>